# takureitings

./: .gitignore  README.md  constants.py  data_explore.ipynb  explore.py  main.py  parse.py  pyproject.toml  races.template.json  rating.py
models/: stirnu_buks.py
